[ramram] main css 변경
- link-color 변경
- main 영역 max-width 변경

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,14 @@
 -->
 <html lang="{{ site.locale | slice: 0,2 | default: "en" }}" class="no-js">
   <head>
+    <!--S-CoreDream-3Light-->
+    <link rel="preload" as="style" href="https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-3Light.woff">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_six@1.2/S-CoreDream-3Light.woff">
+
+    <!--Cafe24Ohsquareair-->
+    <link rel="preload" as="style" href="https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2202@1.0/Cafe24Ohsquareair.woff">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2202@1.0/Cafe24Ohsquareair.woff">
+
     {% include head.html %}
     {% include head/custom.html %}
   </head>
