--- a/_sass/minimal-mistakes/skins/_default.scss
+++ b/_sass/minimal-mistakes/skins/_default.scss
@@ -3,3 +3,4 @@
    ========================================================================== */
 
 // Intentionally left blank
+$link-color: #58ACFA !default;
