--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -8,6 +8,12 @@
 
 $doc-font-size: 16 !default;
 
+/*S-CoreDream-3Light*/
+$custom-font-coredream: "S-CoreDream-3Light" !default;
+
+/*Cafe24Ohsquareair*/
+$custom-font-cafe24: "Cafe24Ohsquareair" !default;
+
 /* paragraph indention */
 $paragraph-indent: false !default; // true, false (default)
 $indent-var: 1.3em !default;
@@ -29,9 +35,9 @@ $bodoni: "Bodoni MT", serif !default;
 $calisto: "Calisto MT", serif !default;
 $garamond: Garamond, serif !default;
 
-$global-font-family: $sans-serif !default;
-$header-font-family: $sans-serif !default;
-$caption-font-family: $serif !default;
+$global-font-family: $custom-font-coredream !default;
+$header-font-family: $custom-font-cafe24 !default;
+$caption-font-family: $custom-font-coredream !default;
 
 /* type scale */
 $type-size-1: 2.441em !default; // ~39.056px
@@ -39,7 +45,7 @@ $type-size-2: 1.953em !default; // ~31.248px
 $type-size-3: 1.563em !default; // ~25.008px
 $type-size-4: 1.25em !default; // ~20px
 $type-size-5: 1em !default; // ~16px
-$type-size-6: 0.75em !default; // ~12px
+$type-size-6: 0.7em !default; // ~12px
 $type-size-7: 0.6875em !default; // ~11px
 $type-size-8: 0.625em !default; // ~10px
 
@@ -148,7 +154,7 @@ $small: 600px !default;
 $medium: 768px !default;
 $medium-wide: 900px !default;
 $large: 1024px !default;
-$x-large: 1280px !default;
+$x-large: 1550 !default;
 $max-width: $x-large !default;
 
 /*
