--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -19,12 +19,12 @@
   @include breakpoint($large) {
     float: left;
     width: calc(#{$right-sidebar-width-narrow} - 1em);
-    opacity: 0.75;
+    opacity: 1;
     -webkit-transition: opacity 0.2s ease-in-out;
     transition: opacity 0.2s ease-in-out;
 
     &:hover {
-      opacity: 1;
+      opacity: 0.75;
     }
 
     &.sticky {
@@ -51,13 +51,13 @@
   h5,
   h6 {
     margin-bottom: 0;
-    font-family: $sans-serif-narrow;
+    font-family: $custom-font-cafe24;
   }
-
+  
   p,
   li {
-    font-family: $sans-serif;
-    font-size: $type-size-6;
+    font-family: $custom-font-pretendard;
+    font-size: $type-size-9;
     line-height: 1.5;
   }
 
@@ -124,8 +124,8 @@
 .author__avatar {
   display: table-cell;
   vertical-align: top;
-  width: 36px;
-  height: 36px;
+  width: 40px;
+  height: 40px;
 
   @include breakpoint($large) {
     display: block;
@@ -134,7 +134,7 @@
   }
 
   img {
-    max-width: 110px;
+    max-width: 130px;
     border-radius: 50%;
 
     @include breakpoint($large) {
@@ -173,7 +173,7 @@
   }
 }
 .sidebar .author__name {
-  font-family: $sans-serif;
+  font-family: $custom-font-pretendard;
   font-size: $type-size-5;
 }
 
