[ramram] 포스팅 & 카테고리 추가 & 폰트추가
- 독서 카테고리 추가
- 토비 카테고리 추가
- OOP 독서 카테고리 추가
- 폰트 추가
- 프로필 이미지 사이즈 변경
- Web Appilcation Context 포스트 작성 (미완)

--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -51,7 +51,7 @@
   h5,
   h6 {
     margin-bottom: 0;
-    font-family: $custom-font-cafe24;
+    font-family: $custom-font-pretendard;
   }
   
   p,
@@ -134,12 +134,11 @@
   }
 
   img {
-    max-width: 130px;
-    border-radius: 50%;
+    max-width: 200px;
+    border-radius: 10%;
 
     @include breakpoint($large) {
-      padding: 5px;
-      border: 1px solid $border-color;
+      margin-bottom: 8px;
     }
   }
 }
@@ -190,7 +189,7 @@
   position: relative;
   display: table-cell;
   vertical-align: middle;
-  font-family: $sans-serif;
+  font-family: $custom-font-pretendard;
   z-index: 20;
   cursor: pointer;
 
