--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -35,6 +35,7 @@
   margin: 1.414em 0 0.5em;
   padding-bottom: 0.5em;
   font-size: $type-size-5;
+  font-family: $custom-font-leferi;
   color: $muted-text-color;
   border-bottom: 1px solid $border-color;
 
@@ -45,7 +46,7 @@
 
 .archive__item-title {
   margin-bottom: 0.25em;
-  font-family: $sans-serif-narrow;
+  font-family: $custom-font-gowundodum;
   line-height: initial;
   overflow: hidden;
   text-overflow: ellipsis;
