--- a/_sass/minimal-mistakes/_navigation.scss
+++ b/_sass/minimal-mistakes/_navigation.scss
@@ -12,7 +12,7 @@
   max-width: 100%;
   padding-left: 1em;
   padding-right: 1em;
-  font-family: $custom-font-cafe24;
+  font-family: $custom-font-gowundodum;
   -webkit-animation: $intro-transition;
   animation: $intro-transition;
   -webkit-animation-delay: 0.3s;
@@ -61,7 +61,7 @@
     margin: 0;
     padding: 0;
     list-style-type: none;
-    font-family: $custom-font-cafe24;
+    font-family: $custom-font-gowundodum;
   }
 
   li {
@@ -73,7 +73,7 @@
       display: block;
       margin-bottom: 0.25em;
       padding: 0.5em 1em;
-      font-family: $custom-font-cafe24;
+      font-family: $custom-font-gowundodum;
       font-size: 14px;
       font-weight: bold;
       line-height: 1.5;
@@ -123,7 +123,7 @@
     padding: 1em 2em;
     float: left;
     width: 50%;
-    font-family: $custom-font-cafe24;
+    font-family: $custom-font-gowundodum;
     font-size: $type-size-5;
     font-weight: bold;
     text-align: center;
@@ -197,7 +197,7 @@
     }
 
     &.site-title {
-      font-family: $custom-font-cafe24;
+      font-family: $custom-font-leferi;
       margin-left: 0;
     }
   }
@@ -484,7 +484,7 @@
 .nav__title {
   margin: 0;
   padding: 0.5rem 0.75rem;
-  font-family: $sans-serif-narrow;
+  font-family: $custom-font-gowundodum;
   font-size: $type-size-5;
   font-weight: bold;
 }
@@ -493,7 +493,7 @@
   display: block;
   margin: 0.5rem 0;
   padding: 0.25rem 0;
-  font-family: $sans-serif-narrow;
+  font-family: $custom-font-gowundodum;
   font-size: $type-size-6;
   font-weight: bold;
   text-transform: uppercase;
