--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -14,6 +14,12 @@ $custom-font-pretendard: "Pretendard-Regular" !default;
 /*Cafe24Ohsquareair*/
 $custom-font-cafe24: "Cafe24Ohsquareair" !default;
 
+/*GowunDodum-Regular*/
+$custom-font-gowundodum: "GowunDodum-Regular" !default;
+
+/*LeferiPoint*/
+$custom-font-leferi: "LeferiPoint-WhiteObliqueA" !default;
+
 /* paragraph indention */
 $paragraph-indent: false !default; // true, false (default)
 $indent-var: 0.6em !default;
@@ -36,7 +42,7 @@ $calisto: "Calisto MT", serif !default;
 $garamond: Garamond, serif !default;
 
 $global-font-family: $custom-font-pretendard !default;
-$header-font-family: $custom-font-cafe24 !default;
+$header-font-family: $custom-font-gowundodum !default;
 $caption-font-family: $custom-font-pretendard !default;
 
 /* type scale */
@@ -77,7 +83,7 @@ $border-color: $lighter-gray !default;
 $form-background-color: $lighter-gray !default;
 $footer-background-color: $lighter-gray !default;
 
-$primary-color: #6f777d !default;
+$primary-color: #2E2E2E !default;
 $success-color: #3fa63f !default;
 $warning-color: #d67f05 !default;
 $danger-color: #ee5f5b !default;
