[ramram] about page 추가

--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -29,6 +29,9 @@
           <div class="navicon"></div>
         </button>
         <ul class="hidden-links hidden"></ul>
+        <a class="site-left-title" href="/layout/about">
+          {{ site.masthead_title | default: site.right_title }}
+        </a>
       </nav>
     </div>
   </div>
