--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -51,10 +51,12 @@ $type-size-2: 1.953em !default; // ~31.248px
 $type-size-3: 1.563em !default; // ~25.008px
 $type-size-4: 1.25em !default; // ~20px
 $type-size-5: 1em !default; // ~16px
-$type-size-6: 0.7em !default; // ~12px
+$type-size-6: 0.78em !default; // ~12px
 $type-size-7: 0.6875em !default; // ~11px
 $type-size-8: 0.625em !default; // ~10px
-$type-size-9: 0.8em !default; // ~10px
+$type-size-9: 0.8em !default; 
+$type-size-10-sub-title: 0.85em !default; 
+$type-size-11-post: 0.9em !default; 
 
 /* headline scale */
 $h-size-1: 1.563em !default; // ~25.008px
