--- a/_sass/minimal-mistakes/_base.scss
+++ b/_sass/minimal-mistakes/_base.scss
@@ -67,6 +67,12 @@ p {
   margin-bottom: 1.3em;
 }
 
+.timeline-header {
+  padding-left: 0px;
+}
+.utterances {
+  max-width: 800px;
+}
 u,
 ins {
   text-decoration: none;
