--- a/_includes/comments-providers/utterances.html
+++ b/_includes/comments-providers/utterances.html
@@ -10,10 +10,10 @@
 
     var script = document.createElement('script');
     script.setAttribute('src', 'https://utteranc.es/client.js');
-    script.setAttribute('repo', 'gzgzg2/blog-comments '); 
+    script.setAttribute('repo', 'gzgzg2/blog-comments');
     script.setAttribute('issue-term', 'pathname');
+    script.setAttribute('label', 'Comment 💬');
     script.setAttribute('theme', 'github-light');
-    script.setAttribute('label', 'comment')
     script.setAttribute('crossorigin', 'anonymous');
 
     commentContainer.appendChild(script);
