--- a/_includes/post.html
+++ b/_includes/post.html
@@ -12,4 +12,12 @@
 	<div class="post-content">
 		{{ content }}
 	</div>
+	<script src="https://utteranc.es/client.js"
+        repo="gzgzg2/blog-comments"
+        issue-term="pathname"
+        label="Comment 🐱"
+        theme="github-light"
+        crossorigin="anonymous"
+        async>
+	</script>
 </article>
