[blog] 2022-05-01-dns 포스팅 포맷 변경

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -271,6 +271,13 @@ article h6 {
 	font-family: "Roboto", "Nanum Gothic";
 	color: #333;
 	margin-bottom: 6px;
+}
+
+article h1,
+article h2 {
+	font-family: "Roboto", "Nanum Gothic";
+	color: #333;
+	margin-bottom: 6px;
 	border-left: 0.4em solid gray;
 	padding: 0.3em;
 }
